--- a/src/main/resources/com/tbt/trainthebrain/main.css
+++ b/src/main/resources/com/tbt/trainthebrain/main.css
@@ -22,6 +22,10 @@
     -fx-font-weight: bold;
 }
 
+.padding-small{
+    -fx-padding: 10px;
+}
+
 #mainHeader {
     -fx-background-image: url('img/header.jpg');
     -fx-background-size: cover;
@@ -167,11 +171,34 @@
     -fx-fill: rgba(255,255,255, 0.02);
 }
 
+/* Question Edit Overview */
+
+.delete-icon {
+    -fx-background-image: url('img/trash_icon_white_128.png');
+    -fx-min-height: 16.0;
+    -fx-min-width: 16.0;
+    -fx-background-size: contain;
+    -fx-background-position: center,center;
+    -fx-background-repeat: no-repeat;
+    -fx-cursor: hand;
+}
+
+.delete-icon:hover {
+    -fx-background-image: url('img/trash_icon_red_128.png');
+    -fx-cursor: hand;
+}
+
+
+
 /* Question Edit */
+.editListQuestionOutterContainer{
+    -fx-padding: 3px 0 3px 0;
+}
+
 .editListQuestionContainer{
     -fx-background-color: #262626;
-    -fx-background-radius: 4px;
-    -fx-border-radius: 4px;
+    -fx-background-radius: 2px;
+    -fx-border-radius: 2px;
     -fx-border-color: #2c2c2c;
     -fx-border-style: solid;
     -fx-border-width: 1px;
