--- a/src/main/resources/com/tbt/trainthebrain/question-edit-overview.fxml
+++ b/src/main/resources/com/tbt/trainthebrain/question-edit-overview.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -22,6 +23,19 @@
                 <Insets bottom="10.0" />
             </padding>
         </HBox>
+       <HBox prefHeight="30.0" prefWidth="463.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="150.0">
+           <children>
+               <Button mnemonicParsing="false" onAction="#backToMainClicked" text="Zurück">
+                   <styleClass>
+                       <String fx:value="btn" />
+                       <String fx:value="btn-default" />
+                   </styleClass>
+                   <graphic>
+                       <Glyph fontFamily="FontAwesome" fontSize="15.0" icon="ARROW_CIRCLE_LEFT" />
+                   </graphic>
+               </Button>
+           </children>
+       </HBox>
         <VBox layoutX="116.0" layoutY="172.0" prefHeight="528.0" prefWidth="960.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="172.0">
             <padding>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -51,7 +65,15 @@
                         </HBox>
                      </children>
                   </VBox>
-                  <VBox fx:id="editListQuestionContainerOutter" prefHeight="200.0" prefWidth="100.0" spacing="3.0" />
+                  <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER">
+                     <content>
+                        <VBox fx:id="editListQuestionContainerOutter" prefHeight="200.0" prefWidth="896.0" spacing="0">
+                           <padding>
+                              <Insets right="10.0" />
+                           </padding>
+                        </VBox>
+                     </content>
+                  </ScrollPane>
                </children>
             </StackPane>
             <HBox alignment="BOTTOM_RIGHT" prefHeight="0.0" prefWidth="920.0">
@@ -63,7 +85,7 @@
                         <String fx:value="lead" />
                      </styleClass>
                      <graphic>
-                        <Glyph fontFamily="FontAwesome" icon="PLUS_CIRCLE" fontSize="18" />
+                        <Glyph fontFamily="FontAwesome" fontSize="18" icon="PLUS_CIRCLE" />
                      </graphic></Button>
                </children>
             </HBox>
