--- a/src/main/resources/com/tbt/trainthebrain/learnmode-endcard.fxml
+++ b/src/main/resources/com/tbt/trainthebrain/learnmode-endcard.fxml
@@ -1,24 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 <?import org.controlsfx.glyphfont.Glyph?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="700" prefHeight="700.0" prefWidth="960.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tbt.trainthebrain.LearnmodeEndcardController">
    <children>
-      <Text fill="WHITE" layoutX="200.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ENDCARD" />
-      <Button layoutX="77.0" layoutY="310.0" mnemonicParsing="false" onAction="#backToMainClicked" text="Zurück zum Home">
-         <styleClass>
-            <String fx:value="btn" />
-            <String fx:value="btn-default" />
-            <String fx:value="lead" />
-         </styleClass>
-         <graphic>
-            <Glyph fontFamily="FontAwesome" icon="HOME" />
-         </graphic>
-      </Button>
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox fx:id="header" alignment="BOTTOM_CENTER" prefHeight="134.0" prefWidth="960.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="NEVER">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="subTitle" text="Zusammenfassung" />
+               </children>
+               <padding>
+                  <Insets bottom="10.0" />
+               </padding>
+            </HBox>
+            <HBox fx:id="summaryContent" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+            <HBox alignment="CENTER_RIGHT" prefHeight="0.0" prefWidth="960.0">
+            <children>
+               <Button layoutX="77.0" layoutY="310.0" mnemonicParsing="false" onAction="#backToMainClicked" text="Zurück zum Home">
+                  <styleClass>
+                     <String fx:value="btn" />
+                     <String fx:value="btn-default" />
+                     <String fx:value="lead" />
+                  </styleClass>
+                  <graphic>
+                     <Glyph fontFamily="FontAwesome" icon="HOME" />
+                  </graphic>
+               </Button>
+            </children>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
