--- a/src/main/resources/com/tbt/trainthebrain/main.css
+++ b/src/main/resources/com/tbt/trainthebrain/main.css
@@ -342,3 +342,7 @@
     -fx-fill: rgba(255, 255, 255, 0.8);
     -fx-font-family: monospace;
 }
+
+/* Chart Data */
+.default-color0.chart-pie { -fx-pie-color: #002172; }
+.default-color1.chart-pie { -fx-pie-color: #440000; }
